<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Song Seeker</string>
    <string name="search_but">Search</string>
    <string name="settings_str">Settings</string>
    <string name="pl_options_str">Playlist Options</string>
    <string name="profile_str">Profile</string>
    <string name="about_str">About</string>
    <string name="shuffle_str">Shuffle</string>
    <string name="mood_str">Mood</string>
    <string name="tempo_str">Tempo</string>
    <string name="danceability_str">Danceability</string>
    <string name="hotness_str">Hotness</string>
    <string name="energy_str">Energy</string>
    <string name="variety_str">Variety</string>
    <string name="max_results_str">Max Results</string>
    <string name="invalid_args_str">Please specify a valid argument.</string>
    <string name="err_mediaplayer">Unable to start the Media Player! Please try again later.</string>
    <string name="refresh_str">Refresh</string>
    <string name="export_str">Export as...</string>
    <string name="auth_str">Authorized!</string>
    <string name="not_auth_str">Not Authorized!</string>
    <string name="pl_created_str">Playlist created!</string>
    <string name="remove_song_str">Remove Song</string>
    <string name="remove_artist_str">Remove Artist</string>
    <string name="seek_songs_but_str">Get more SONGS!</string>
    <string name="clear_auth_title_str">Clear Authentications</string>
    <string name="clear_auth_summ_str">Resets authentication from all logged in services</string>
    <string name="clear_prof_title_str">Clear Profile</string>
    <string name="clear_prof_summ_str">Removes all artists from your profile</string>
    <string name="clear_cache_title_str">Clear Cache</string>
    <string name="clear_cache_summ_str">Removes cached data stored in your device</string>
    <string name="artist_name_str">artist name</string>
    <string name="username_str">username</string>
    <string name="password_str">password</string>
    <string name="op_cancel_str">Operation cancelled!</string>
    <string name="buy_at_str">Buy at</string>
    <string name="sevendigital_str">7digital</string>
    <string name="watch_on_str">Watch on</string>
    <string name="youtube_str">YouTube</string>
    <string name="add_to_str">Add to</string>
    <string name="playlist_str">Playlist</string>
    <string name="share_str">Share</string>
    <string name="song_str">Song</string>
    <string name="album_str">Album</string>
    <string name="artist_str">Artist</string>
    <string name="play_str">Play!</string>
	<string name="general_preferences">General Preferences</string>
	<string name="cache_preferences">Cache Preferences</string>
    <string name="auto_clear_cache_title_str">Auto Clear Cache</string>
    <string name="auto_clear_cache_summ_str">Auto clears the cache when it reachs the specified size</string>
</resources>