<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<Button android:layout_height="100dip" android:layout_width="180dip"
		android:text="@string/seek_songs_but_str" android:id="@+id/seek_songs_but"
		android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
		android:layout_marginLeft="72dp" android:layout_marginTop="88dp"
		style="@style/Button"></Button>

	<EditText android:id="@+id/find_input" android:layout_width="180dip"
		android:layout_height="50dp" android:hint="@string/artist_name_str"
		android:layout_below="@+id/seek_songs_but"
		android:layout_marginTop="60dip" android:layout_marginLeft="30dip">
		<requestFocus></requestFocus>
	</EditText>

	<Button android:layout_height="wrap_content" android:gravity="center"
		android:id="@+id/search_but" android:text="@string/search_but"
		android:layout_width="wrap_content" style="@style/Button"
		android:layout_toRightOf="@+id/find_input" android:layout_alignTop="@+id/find_input">
	</Button>

</RelativeLayout>
